2024-02-06T00:29:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7792781428 # 90
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 319 667 / 334 696
* notice: next accum: outdated-unq outdated-all / unq all: 319 667 / 334 697
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-05]

2024-02-05T16:06:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7787367339 # 89
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 318 665 / 334 696
* notice: next accum: outdated-unq outdated-all / unq all: 319 667 / 334 696
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-22] / []

2024-02-05T08:08:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7781356334 # 88
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 318 665 / 333 695
* notice: next accum: outdated-unq outdated-all / unq all: 318 665 / 334 696
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-22 2024-02-05]

2024-02-05T00:31:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7777899511 # 87