@@ -1,11 +1,11 @@
 {
-  "count": 30,
-  "uniques": 2,
+  "count": 29,
+  "uniques": 1,
   "clones": [
     {
       "timestamp": "2024-01-23T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2024-01-24T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-02-05T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-06T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
