@@ -1,3 +1,12 @@
+2024-02-06T08:09:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7796518855 # 91
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
+* notice: last 14d: unq all: 1 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 319 667 / 334 697
+* notice: next accum: outdated-unq outdated-all / unq all: 319 667 / 335 698
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-23 2024-02-06]
+
 2024-02-06T00:29:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7792781428 # 90
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
